<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aabackgroundc"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal" >

        <Button
            android:onClick="BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/back"
            android:backgroundTint="@color/lightblue"
            android:textColor="@color/black" />

    <TextView
        android:id="@+id/changeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="Ingen vald"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white" />


</LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/exPlan"
        android:layout_width="315dp"
        android:layout_height="250dp"
        android:layout_marginLeft="50dp"
        android:background="@color/lightblue"
        android:text=" "
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/black" />


    <EditText
        android:id="@+id/editNotes1"
        android:layout_width="315dp"
        android:layout_height="150dp"
        android:layout_marginLeft="50dp"
        android:background="@color/lightblue" />



    <Button
        android:onClick="SaveNotesButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="215dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_edit" />


</LinearLayout>