<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aabackgroundc"
    android:orientation="vertical"
    tools:context=".AddWorkoutActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingTop="20dp"
        android:text="@string/edit_schedule"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/chooseWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/addworkout"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spinnerWorkout"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:background="@color/lightblue"
        android:backgroundTint="@color/white"
        android:fadeScrollbars="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/chooseDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:text="@string/day"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/spinnerDay"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:background="@color/lightblue"
        android:backgroundTint="@color/white"
        android:fadeScrollbars="true" />

    <Button
        android:onClick="SaveEditButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="120dp"
        android:backgroundTint="@color/bpurple"
        android:text="@string/addworkout">

    </Button>

    <Button
        android:onClick="BackButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="120dp"
        android:backgroundTint="@color/purplegrey"
        android:text="@string/back">

    </Button>

    <TextView
        android:id="@+id/corrMessageSpinPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:text=" "
        android:textColor="@color/red" >
    </TextView>

    <TextView
        android:id="@+id/lblTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>



</LinearLayout>