<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aabackgroundc"
    android:orientation="vertical" >


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/activeplan4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/username" />

    <EditText
        android:id="@+id/usernamemain"
        android:layout_width="205dp"
        android:layout_height="30dp"
        android:layout_marginLeft="110dp"
        android:background="@color/white"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:paddingTop="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordmain"
        android:layout_width="205dp"
        android:layout_height="30dp"
        android:layout_marginLeft="110dp"
        android:background="@color/white"
        android:inputType="textPassword" />

    <Button
        android:onClick="LogInButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in" />

    <Button
        android:onClick="newAccountbtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/lightblue"
        android:text="Skapa konto" />

    <TextView
        android:id="@+id/corrMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:text=" "
        android:textColor="@color/red" >
    </TextView>





</LinearLayout>